Fix broken css

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*
-  Theme Name: Rapid
-  Theme URL: https://bootstrapmade.com/rapid-multipurpose-bootstrap-business-template/
-  Author: BootstrapMade.com
-  License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -16,14 +9,14 @@ body {
 }
 
 a {
-  color: #07bd07b7;
+  color: #413e66;
   transition: 0.5s;
 }
 
 a:hover,
 a:active,
 a:focus {
-  color: #07bd07b7;
+  color: #8892b0;
   outline: none;
   text-decoration: none;
 }
@@ -50,7 +43,7 @@ h6 {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #07bd07b7;
+  background: #413e66;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -88,7 +81,7 @@ h6 {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #07bd07b7;
+  border-top: 6px solid #413e66;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -135,14 +128,14 @@ h6 {
 }
 
 #topbar .social-links a {
-  color: #535074;
+  color: #8892b0;
   padding: 4px 12px;
   display: inline-block;
   line-height: 1px;
 }
 
 #topbar .social-links a:hover {
-  color: #07bd07b7;
+  color: #413e66;
 }
 
 #topbar .social-links a:first-child {
@@ -219,14 +212,14 @@ h6 {
 }
 
 #intro .intro-info h2 {
-  color: #413e66;
+  color: #8892b0;
   margin-bottom: 40px;
   font-size: 48px;
-  font-weight: 700;
+  font-weight: 900;
 }
 
 #intro .intro-info h2 span {
-  color: #07bd07b7;
+  color: #413e66;
 }
 
 #intro .intro-info .btn-get-started,
@@ -241,13 +234,13 @@ h6 {
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
-  background: #07bd07b7;
+  background: #413e66;
   color: #fff;
 }
 
 #intro .intro-info .btn-get-started:hover,
 #intro .intro-info .btn-services:hover {
-  background: #07bd07b7;
+  background: #413e66;
 }
 
 /*--------------------------------------------------------------
@@ -277,7 +270,7 @@ h6 {
 .main-nav a {
   display: block;
   position: relative;
-  color: #413e66;
+  color: #8892b0;
   padding: 10px 15px;
   transition: 0.3s;
   font-size: 14px;
@@ -289,7 +282,7 @@ h6 {
 .main-nav a:hover,
 .main-nav .active > a,
 .main-nav li:hover > a {
-  color: #07bd07b7;
+  color: #413e66;
   text-decoration: none;
 }
 
@@ -329,7 +322,7 @@ h6 {
 .main-nav .drop-down ul a:hover,
 .main-nav .drop-down ul .active > a,
 .main-nav .drop-down ul li:hover > a {
-  color: #07bd07b7;
+  color: #413e66;
 }
 
 .main-nav .drop-down > a:after {
@@ -532,7 +525,7 @@ h6 {
 #about .about-content ul li i {
   font-size: 20px;
   padding-right: 4px;
-  color: #07bd07b7;
+  color: #413e66;
 }
 
 #about .about-img {
@@ -626,7 +619,7 @@ h6 {
 }
 
 #services .box:hover .title a {
-  color: #07bd07b7;
+  color: #0790b6;
 }
 
 #services .description {
@@ -722,8 +715,8 @@ h6 {
 }
 
 #call-to-action .cta-btn:hover {
-  background: #07bd07b7;
-  border: 3px solid #07bd07b7;
+  background: #8892b0;
+  border: 3px solid #fff;
 }
 
 /* Features Section
@@ -766,7 +759,7 @@ h6 {
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  color: #07bd07b7;
+  color: #413e66;
 }
 
 #portfolio #portfolio-flters li:last-child {
@@ -831,7 +824,7 @@ h6 {
 }
 
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info h4 a:hover {
-  color: #07bd07b7;
+  color: #413e66;
 }
 
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info p {
@@ -850,7 +843,7 @@ h6 {
   text-align: center;
   width: 36px;
   height: 36px;
-  background: #07bd07b7;
+  background: #413e66;
   border-radius: 50%;
   margin: 10px 4px 0 4px;
 }
@@ -864,7 +857,7 @@ h6 {
 
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-preview:hover,
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-details:hover {
-  background: #07bd07b7;
+  background: #413e66;
 }
 
 #portfolio
@@ -944,7 +937,7 @@ h6 {
 }
 
 #testimonials .owl-dot.active {
-  background-color: #07bd07b7;
+  background-color: #413e66;
 }
 
 /* Team Section
@@ -1021,7 +1014,7 @@ h6 {
 }
 
 #team .member .social a:hover {
-  color: #07bd07b7;
+  color: #413e66;
 }
 
 #team .member .social i {
@@ -1063,7 +1056,7 @@ h6 {
 }
 
 #clients .owl-dot.active {
-  background-color: #07bd07b7;
+  background-color: #413e66;
 }
 
 /* Pricing Section
@@ -1089,7 +1082,7 @@ h6 {
   left: 0;
   width: 0%;
   height: 5px;
-  background-color: #07bd07b7;
+  background-color: #413e66;
   transition: 0.5s;
 }
 
@@ -1209,7 +1202,7 @@ h6 {
 }
 
 #faq #faq-list a.collapse {
-  color: #07bd07b7;
+  color: #413e66;
 }
 
 #faq #faq-list a.collapsed {
@@ -1262,7 +1255,7 @@ h6 {
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #07bd07b7;
+  background: #8892b0;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1275,14 +1268,14 @@ h6 {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #07bd07b7;
+  background: #413e66;
   color: #fff;
 }
 
 #footer .footer-top h4 {
   font-size: 14px;
   font-weight: bold;
-  color: #413e66;
+  color: #8892b0;
   text-transform: uppercase;
   position: relative;
   padding-bottom: 10px;
@@ -1311,7 +1304,7 @@ h6 {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #07bd07b7;
+  color: #413e66;
 }
 
 #footer .footer-top .footer-contact {
@@ -1334,8 +1327,8 @@ h6 {
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"] {
-  background: #07bd07b7;
-  border: 1px solid #07bd07b7;
+  background: #413e66;
+  border: 1px solid #413e66;
   width: 35%;
   padding: 6px 0;
   text-align: center;
@@ -1345,7 +1338,7 @@ h6 {
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"]:hover {
-  background: #07bd07b7;
+  background: #413e66;
 }
 
 #footer .footer-top .form .form-group {
@@ -1354,7 +1347,7 @@ h6 {
 
 #footer .footer-top .form #sendmessage {
   color: #fff;
-  background: #07bd07b7;
+  background: #413e66;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1420,7 +1413,7 @@ h6 {
 }
 
 #footer .footer-top .form button[type="submit"] {
-  background: #07bd07b7;
+  background: #413e66;
   border: 0;
   border-radius: 3px;
   padding: 8px 30px;
@@ -1429,7 +1422,7 @@ h6 {
 }
 
 #footer .footer-top .form button[type="submit"]:hover {
-  background: #07bd07b7;
+  background: #413e66;
   cursor: pointer;
 }
 
@@ -1448,11 +1441,11 @@ h6 {
 }
 
 #footer .credits a {
-  color: #07bd07b7;
+  color: #413e66;
 }
 
 #footer .credits a:hover {
-  color: #07bd07b7;
+  color: #413e66;
 }
 
 /*--------------------------------------------------------------
